# federated-dp-sec_agg-flower

./: README.md  pyproject.toml
src/: client_app.py  server_app.py  task.py
