[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dp-fl-sa"
version = "1.0.0"
description = "Local Differentially Private Federated Learning with Secure Aggregation in Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.0",
    "torch==2.1.1",
    "torchvision==0.16.1",
    "medmnist==3.0.1",
    "toml==0.10.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "mohres"

[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 50
fraction-fit = 1.0
fraction-evaluate = 0.5
local-epochs = 3

# Parameters for the SecAgg+ protocol
num-shares = 5
reconstruction-threshold = 4
max-weight = 10000

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 6
options.backend.client-resources.num-gpus = 1.0


[dataset]
name = "bloodmnist" # bloodmnist, organamnist, pathmnist
in_channels = 3  # 3, 1, 3
num_classes = 8  # 8, 11, 9


